static/stylesheets/base.css
/* ... */
.logo-row div {
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 20px 0;
}

.logo-row.small div {
    width: 20%;
    min-width: 140px;
    height: 80px;
}
.logo-row.small a {
    max-width: 130px;
}
.logo-row.small img {
    max-height: 80px;
    max-width: 130px;
}

.logo-row.medium div {
    width: 33%;
    min-width: 230px;
    height: 150px;
}
.logo-row.medium a {
    max-width: 220px;
}
.logo-row.medium img {
    max-height: 150px;
    max-width: 220px;
}

.logo-row.large div {
    width: 50%;
    min-width: 360px;
    height: 225px;
}
.logo-row.large a {
    max-width: 350px;
}
.logo-row.large img {
    max-height: 225px;
    max-width: 350px;
}

.logo-row.premium div {
    width: 100%;
    min-width: 700px;
    height: 300px;
}
.logo-row.premium a {
    max-width: 700px;
}
.logo-row.premium img {
    max-height: 300px;
    max-width: 700px;
}

.basic-info h1 {
    /* Style as h2 */
    font-family: 'Ubuntu', sans-serif;
    font-size: 14pt;
    font-weight: bolder;
    color: #66686a;
    padding: 0;
    margin-top: 0;
    transition: 0.2s;
}

.basic-info {
    visibility: visible;
    transition: all 0.2s;
}

.extra-info {
    display: none;
    visibility: hidden;
    transition: all 0.2s;
}

.grid-item-expand h2 {
    color: #0093B1;
    padding: 15px 0 0 0;
}


.clickable-icon {
    transition: background-color 0.2s;
}

.grid-item:hover .clickable-icon {
    background-color: #FFE641;
    transition: background-color 0.2s;
}

.flavor-image {
    max-width: 100%;
    min-height: 100%;
    background-color: white;
}

.tile-image {
    margin: 0;
    max-height: 70%;
    max-width: 70%;
    opacity: 0.6;
}

.partner-logo {
    max-height: 80px;
    max-width:100%;
}

/* --- FAQ Tile Content --- */

.faq-container {
    width: 92%;
    margin: 0 auto;
}

li.question {
    list-style-type: none;
    font-style: italic;
    margin-bottom: 5px;
}

li.answer {
    list-style-type: none;
    margin-bottom: 10px;
    margin-left: 2em;
}

.footer-bar {
    height: 180px;
    width: 100%;
    padding-bottom: 20px;
    color: white;
    font-size: 10pt;
    text-align:center;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.footer-left{
    height: 100%;
    width: 100px;
    margin-left: 50px;
}

#footer-flag {
    height: 150px;
    margin-bottom: 5px;
}

.footer-middle{
    height: 100%;
    min-width: 100px;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
}

.contact *{
    margin: 0 5px;
    color: white;
}

.contact *:hover{
    color: #4a4948;
    text-decoration: none;
}

.footer-middle p {
    margin: 0;
}

.footer-right{
    height: 100%;
    width: 100px;
    margin-right: 50px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.footer-right p {
    margin: 0;
    font-size: 14pt;
}

/* --- @media Queries --- */

@media only screen and (max-width: 1140px) {
    .faq-item {
        width: 45%;
        margin-right: 4%;
    }
}

@media only screen and (max-width: 720px) {
    #headerButtons {
        display:none;
    }

    #headerDropdown {
        display: block;
    }

    #eventInfo {
        left: 25px;
        transition: left 0.4s;
    }

    #eventInfo h2 {
        font-size: 12pt;
    }

    #eventInfo p {
        font-size: 10pt;
    }

    .flex-row {
        flex-direction: column;
    }

    .faq-row {
        margin: 0 0 10px 0;
        flex-direction: column;
    }

    .col-2, .col-2-bigL, .col-2-smallR{
        width: 100%;
    }

    .col-3 {
        width: 100%;
    }

    .logo-container .logo-row {
        flex-direction: column;
    }

    .logo-row div {
        width: 100% !important;
        min-width: 0 !important;
    }
    .logo-row img {
        max-width: 100% !important;
    }

    .quotes .quote-column {
        width: 100%;
    }

    .more-info .quotes {
        flex-direction: column;
    }

    .faq-item {
        width: 95%;
        margin-right: 0;
    }
}

@media only screen and (max-width: 550px){
    #eventInfo {
        width: 140px;
    }
}

@media only screen and (max-width: 350px) {
    #eventInfo h2 {
        font-size: 10pt;
    }

    #eventInfo p {
        font-size: 8pt;
    }
}

/* --- Application Stylings --- */

.logo{
    margin: 0px auto;
    display: block;
}

.container_apply {
    width: 50%;
    margin-top: 50px;
    -webkit-box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
    -moz-box-shadow:0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
    margin-left: auto;
    margin-right: auto;
    border: 1px solid  rgba(0,0,0,0.33);
}

.full{
    margin-left: 30px;
    margin-right: 30px;
    margin-bottom: 15px;
}


/* Inputs  */

html input[type="number"]{
    box-sizing: border-box;
    text-align: center;
    font-size: 18px;
    padding-right: 8px;
}

html input[type="text"],
html input[type="tel"],

html input[type="number"],
html input[type="url"],
html input[type="email"],
html input[type="password"],
html input[type="school"],
html input{
    box-shadow: none;
    opacity: 0.7;
    border-width: 0 0 1px 0;
    border-radius: 0;
    -webkit-transition: .4s;
    transition: .4s;
    padding: 0px;
    outline: none;
}

html input[type="text"]:hover,
html input[type="tel"]:hover,

html input[type="number"]:hover,
html input[type="url"]:hover,
html input[type="email"]:hover,
html input[type="password"]:hover,
html input[type="school"]:hover,
html input:hover {
    border-color: #1865AE; /* UPDATE COLOR */
}
/* ... */

